<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/goku"
        android:contentDescription="@string/banner"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/title"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp">

        <ImageView
            android:layout_width="105dp"
            android:layout_height="130dp"
            android:background="@drawable/goku1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/desc1"
            android:textSize="20sp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:textAlignment="textStart"
            tools:ignore="RtlCompat"
            android:layout_marginStart="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp">

        <ImageView
            android:layout_width="105dp"
            android:layout_height="130dp"
            android:background="@drawable/vegita"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/desc2"
            android:textSize="20sp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:textAlignment="textStart"
            tools:ignore="RtlCompat"
            android:layout_marginStart="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp">

        <ImageView
            android:layout_width="105dp"
            android:layout_height="130dp"
            android:background="@drawable/beerus"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/desc3"
            android:textSize="20sp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:textAlignment="textStart"
            tools:ignore="RtlCompat"
            android:layout_marginStart="16dp"/>

    </LinearLayout>

</LinearLayout>